--- a/vs/driver64/driver64.vcxproj
+++ b/vs/driver64/driver64.vcxproj
@@ -150,6 +150,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\driver\config.h" />
     <ClInclude Include="..\..\driver\connection.h" />
     <ClInclude Include="..\..\driver\diagnostics.h" />
     <ClInclude Include="..\..\driver\environment.h" />
@@ -164,6 +165,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\driver\attr.cpp" />
+    <ClCompile Include="..\..\driver\config.cpp" />
     <ClCompile Include="..\..\driver\connection.cpp" />
     <ClCompile Include="..\..\driver\diagnostics.cpp" />
     <ClCompile Include="..\..\driver\handles.cpp" />
