--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -1,3 +1,4 @@
+include (../contrib/poco/cmake/FindODBC.cmake)
 
 add_library(clickhouse-odbc SHARED
     attr.cpp
@@ -19,5 +20,5 @@ set_target_properties(clickhouse-odbc
 target_link_libraries(clickhouse-odbc
     ${Poco_Net_LIBRARY}
     ${Poco_Foundation_LIBRARY}
-    odbc
+    ${ODBC_LIBRARIES}
 )
