travis-ci: use "apt-add-repository" for repo management

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,7 @@ matrix:
     - compiler: gcc
 
 install:
-  - sudo echo "deb http://archive.ubuntu.com/ubuntu xenial main universe" | sudo tee -a /etc/apt/sources.list.d/xenial.list
-  - sudo echo "deb http://archive.ubuntu.com/ubuntu xenial main" | sudo tee -a /etc/apt/sources.list.d/xenial.list
+  - sudo apt-add-repository "deb http://archive.ubuntu.com/ubuntu xenial main universe"
   - sudo apt-get update -q > build.log 2>&1 || (cat build.log && exit 1)
   - sudo apt-get install unixodbc-dev binutils -y > build.log 2>&1 || (cat build.log && exit 1)
 
