--- a/vs/driver32/driver32.vcxproj.filters
+++ b/vs/driver32/driver32.vcxproj.filters
@@ -15,31 +15,31 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\connection.h">
+    <ClInclude Include="..\..\driver\connection.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\environment.h">
+    <ClInclude Include="..\..\driver\environment.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\log.h">
+    <ClInclude Include="..\..\driver\log.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\read_helpers.h">
+    <ClInclude Include="..\..\driver\read_helpers.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\result_set.h">
+    <ClInclude Include="..\..\driver\result_set.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\statement.h">
+    <ClInclude Include="..\..\driver\statement.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\string_ref.h">
+    <ClInclude Include="..\..\driver\string_ref.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\utils.h">
+    <ClInclude Include="..\..\driver\utils.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\platform.h">
+    <ClInclude Include="..\..\driver\platform.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
     <ClInclude Include="..\..\driver\diagnostics.h">
@@ -53,22 +53,22 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\attr.cpp">
+    <ClCompile Include="..\..\driver\attr.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\handles.cpp">
+    <ClCompile Include="..\..\driver\handles.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\info.cpp">
+    <ClCompile Include="..\..\driver\info.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\odbc.cpp">
+    <ClCompile Include="..\..\driver\odbc.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\result_set.cpp">
+    <ClCompile Include="..\..\driver\result_set.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\Source\Repos\clickhouse-odbc\driver\statement.cpp">
+    <ClCompile Include="..\..\driver\statement.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="..\..\driver\connection.cpp">
