--- a/vs/driver64w/driver64w.vcxproj
+++ b/vs/driver64w/driver64w.vcxproj
@@ -159,6 +159,7 @@
     <ClInclude Include="..\..\driver\result_set.h" />
     <ClInclude Include="..\..\driver\statement.h" />
     <ClInclude Include="..\..\driver\string_ref.h" />
+    <ClInclude Include="..\..\driver\type_parser.h" />
     <ClInclude Include="..\..\driver\utils.h" />
     <ClInclude Include="..\..\driver\win\resource.h" />
   </ItemGroup>
@@ -172,6 +173,7 @@
     <ClCompile Include="..\..\driver\odbc.cpp" />
     <ClCompile Include="..\..\driver\result_set.cpp" />
     <ClCompile Include="..\..\driver\statement.cpp" />
+    <ClCompile Include="..\..\driver\type_parser.cpp" />
     <ClCompile Include="..\..\driver\win\dllmain.cpp" />
     <ClCompile Include="..\..\driver\win\setup.cpp" />
   </ItemGroup>
