--- a/vs/driver32w/driver32w.vcxproj.filters
+++ b/vs/driver32w/driver32w.vcxproj.filters
@@ -51,6 +51,9 @@
     <ClInclude Include="..\..\driver\type_parser.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\driver\escape_sequences.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\driver\attr.cpp">
@@ -87,6 +90,9 @@
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
     <ClCompile Include="..\..\driver\type_parser.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\driver\escape_sequences.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
   </ItemGroup>
