--- a/vs/driver64w/driver64w.vcxproj
+++ b/vs/driver64w/driver64w.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="..\..\driver\connection.h" />
     <ClInclude Include="..\..\driver\diagnostics.h" />
     <ClInclude Include="..\..\driver\environment.h" />
+    <ClInclude Include="..\..\driver\escape_sequences.h" />
     <ClInclude Include="..\..\driver\log.h" />
     <ClInclude Include="..\..\driver\platform.h" />
     <ClInclude Include="..\..\driver\read_helpers.h" />
@@ -168,6 +169,7 @@
     <ClCompile Include="..\..\driver\config.cpp" />
     <ClCompile Include="..\..\driver\connection.cpp" />
     <ClCompile Include="..\..\driver\diagnostics.cpp" />
+    <ClCompile Include="..\..\driver\escape_sequences.cpp" />
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\odbc.cpp" />
