--- a/vs/driver64/driver64.vcxproj
+++ b/vs/driver64/driver64.vcxproj
@@ -154,7 +154,9 @@
     <ClInclude Include="..\..\driver\connection.h" />
     <ClInclude Include="..\..\driver\diagnostics.h" />
     <ClInclude Include="..\..\driver\environment.h" />
-    <ClInclude Include="..\..\driver\escape_sequences.h" />
+    <ClInclude Include="..\..\driver\escaping\escape_sequences.h" />
+    <ClInclude Include="..\..\driver\escaping\lexer.h" />
+    <ClInclude Include="..\..\driver\escaping\string_view.h" />
     <ClInclude Include="..\..\driver\log.h" />
     <ClInclude Include="..\..\driver\platform.h" />
     <ClInclude Include="..\..\driver\read_helpers.h" />
@@ -170,7 +172,8 @@
     <ClCompile Include="..\..\driver\config.cpp" />
     <ClCompile Include="..\..\driver\connection.cpp" />
     <ClCompile Include="..\..\driver\diagnostics.cpp" />
-    <ClCompile Include="..\..\driver\escape_sequences.cpp" />
+    <ClCompile Include="..\..\driver\escaping\escape_sequences.cpp" />
+    <ClCompile Include="..\..\driver\escaping\lexer.cpp" />
     <ClCompile Include="..\..\driver\handles.cpp" />
     <ClCompile Include="..\..\driver\info.cpp" />
     <ClCompile Include="..\..\driver\odbc.cpp" />
