--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -3,12 +3,9 @@ version: 1.0.{build}
 clone_script:
   - cmd: git clone --recursive --branch=%APPVEYOR_REPO_BRANCH% https://github.com/%APPVEYOR_REPO_NAME%.git %APPVEYOR_BUILD_FOLDER%
 
-platform:
-  - x86
-  - x64
+platform: [ x86, x64 ]
 
-configuration:
-  - Release
+configuration: [ Release, Debug ]
 
 build_script:
   - ps: |
@@ -16,4 +13,4 @@ build_script:
 
 deploy_script:
    - ps: |
-       Push-AppveyorArtifact @{"x86"="vs\installer32\bin\Release\clickhouse_odbc_x32.msi";"x64"="vs\installer64\bin\Release\clickhouse_odbc_x64.msi"}[$env:PLATFORM]
+       Push-AppveyorArtifact ( "vs\installer{1}\bin\{0}\clickhouse_odbc_x{1}.msi" -f $env:Configuration, @{"x86"="32";"x64"="64"}[$env:PLATFORM] )
