process fn ROUND

--- a/driver/ut/CMakeLists.txt
+++ b/driver/ut/CMakeLists.txt
@@ -2,6 +2,7 @@
 add_executable(clickhouse-odbc-ut
     main.cpp
     escape_sequences_ut.cpp
+    lexer_ut.cpp
 )
 
 target_link_libraries(clickhouse-odbc-ut
