fix build on windows

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(clickhouse-odbc SHARED
     config.cpp
     connection.cpp
     diagnostics.cpp
+    environment.cpp
     handles.cpp
     info.cpp
     odbc.cpp
