--- a/vs/driver32/driver32.vcxproj
+++ b/vs/driver32/driver32.vcxproj
@@ -174,6 +174,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\driver\attr.cpp" />
+    <ClCompile Include="..\..\driver\environment.cpp" />
     <ClCompile Include="..\..\driver\escaping\escape_sequences.cpp" />
     <ClCompile Include="..\..\driver\escaping\lexer.cpp" />
     <ClCompile Include="..\..\driver\handles.cpp" />
