--- a/vs/driver32w/driver32w.vcxproj.filters
+++ b/vs/driver32w/driver32w.vcxproj.filters
@@ -104,6 +104,9 @@
     <ClCompile Include="..\..\driver\escaping\lexer.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\driver\environment.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\driver\win\exportw.def">
