--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_subdirectory (gtest)
+if (CLICKHOUSE_ODBC_TEST)
+    add_subdirectory (gtest)
+endif ()
 
 if (USE_INTERNAL_POCO_LIBRARY)
     add_subdirectory (poco)
