--- a/contrib/gtest/CMakeLists.txt
+++ b/contrib/gtest/CMakeLists.txt
@@ -1,3 +1,5 @@
-ADD_LIBRARY (gtest-lib STATIC
+add_library(gtest-lib STATIC
     gtest-all.cc
 )
+
+target_include_directories(gtest-lib PUBLIC ..) 
