--- a/driver/escaping/CMakeLists.txt
+++ b/driver/escaping/CMakeLists.txt
@@ -2,3 +2,5 @@ add_library(clickhouse-odbc-escaping
     escape_sequences.cpp
     lexer.cpp
 )
+
+target_include_directories(clickhouse-odbc-escaping PUBLIC ..)
