--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -5,4 +5,5 @@ Driver = Clickhouse
 Description = Clickhouse driver
 #DATABASE = default
 #HOST = localhost
-PORT = 8123
+#PORT = 8123
+#PROTO = http
