--- a/driver/odbc.ini
+++ b/driver/odbc.ini
@@ -4,6 +4,6 @@
 Driver = Clickhouse
 Description = Clickhouse driver
 #DATABASE = default
-#HOST = localhost
+#SERVER = localhost
 #PORT = 8123
 #PROTO = http
