Fix macos link (#56)

--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -39,6 +39,10 @@ target_link_libraries(clickhouse-odbc
     ${ODBC_LIBRARIES}
 )
 
+if(APPLE)
+    target_link_libraries(clickhouse-odbc ${LTDL_LIBRARY})
+endif()
+
 install(TARGETS clickhouse-odbc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/odbc)
 install(FILES unixodbc.ini DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/clickhouse-odbc)
 install(FILES odbc.ini DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples)
