--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ if (CLICKHOUSE_ODBC_TEST)
     enable_testing ()
 endif ()
 
-option (ENABLE_SSL "Use openssl for accessing https:// interface" ON)
+option (ENABLE_SSL "Use openssl for accessing https:// interface" 0)
 
 if (ENABLE_SSL)
     include (cmake/find_ssl.cmake)
