--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -47,6 +47,10 @@ if(APPLE)
     target_link_libraries(clickhouse-odbc ${LTDL_LIBRARY})
 endif()
 
+if (WIN32)
+  target_link_libraries(clickhouse-odbc ws2_32)
+endif()
+
 install(TARGETS clickhouse-odbc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/odbc)
 install(FILES unixodbc.ini DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/clickhouse-odbc)
 install(FILES odbc.ini DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples)
