--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -47,9 +47,15 @@ if(APPLE)
     target_link_libraries(clickhouse-odbc ${LTDL_LIBRARY})
 endif()
 
-install(TARGETS clickhouse-odbc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/odbc)
-install(FILES unixodbc.ini DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/clickhouse-odbc)
-install(FILES odbc.ini DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples)
+if (WIN32)
+  target_link_libraries(clickhouse-odbc ws2_32 Iphlpapi libcmt msvcrt msvcmrt)
+endif()
+
+if (NOT WIN32)
+    install(TARGETS clickhouse-odbc LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/odbc)
+    install(FILES unixodbc.ini DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/clickhouse-odbc)
+    install(FILES odbc.ini DESTINATION ${CMAKE_INSTALL_DOCDIR}/examples)
+endif()
 
 if(CLICKHOUSE_ODBC_TEST)
     add_subdirectory(ut)
