--- a/driver/CMakeLists.txt
+++ b/driver/CMakeLists.txt
@@ -43,7 +43,7 @@ target_link_libraries(clickhouse-odbc
     ${Poco_Net_LIBRARY}
     ${Poco_Foundation_LIBRARY}
     ${ODBC_LIBRARIES}
-    -Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker_script
+    "-Wl,--version-script=${CMAKE_CURRENT_SOURCE_DIR}/linker_script"
 )
 
 if(APPLE)
