Add ssl submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contrib/poco"]
 	path = contrib/poco
 	url = https://github.com/pocoproject/poco.git
+[submodule "contrib/ssl"]
+	path = contrib/ssl
+	url = https://github.com/ClickHouse-Extras/ssl.git
