--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -2,6 +2,16 @@ if (CLICKHOUSE_ODBC_TEST)
     add_subdirectory (gtest)
 endif ()
 
+if (USE_INTERNAL_SSL_LIBRARY)
+    if (NOT MAKE_STATIC_LIBRARIES)
+        set (BUILD_SHARED 1)
+    endif ()
+    set (USE_SHARED ${USE_STATIC_LIBRARIES})
+    add_subdirectory (ssl)
+    target_include_directories(${OPENSSL_CRYPTO_LIBRARY} PUBLIC ${OPENSSL_INCLUDE_DIR})
+    target_include_directories(${OPENSSL_SSL_LIBRARY} PUBLIC ${OPENSSL_INCLUDE_DIR})
+endif ()
+
 if (USE_INTERNAL_POCO_LIBRARY)
     add_subdirectory (poco)
     if (OPENSSL_FOUND AND TARGET Crypto)
