Linux: build with ssl by default (#76)
* Linux: build with ssl by default

* Add ssl submodule

--- a/contrib/CMakeLists.txt
+++ b/contrib/CMakeLists.txt
@@ -2,10 +2,23 @@ if (CLICKHOUSE_ODBC_TEST)
     add_subdirectory (gtest)
 endif ()
 
+if (USE_INTERNAL_SSL_LIBRARY)
+    if (NOT MAKE_STATIC_LIBRARIES)
+        set (BUILD_SHARED 1)
+    endif ()
+    set (USE_SHARED ${USE_STATIC_LIBRARIES})
+    add_subdirectory (ssl)
+endif ()
+
 if (USE_INTERNAL_POCO_LIBRARY)
     add_subdirectory (poco)
     if (OPENSSL_FOUND AND TARGET Crypto)
         # Bug in poco https://github.com/pocoproject/poco/pull/2100 found on macos
-        target_include_directories(Crypto PUBLIC ${OPENSSL_INCLUDE_DIR})
+        target_include_directories(Crypto PUBLIC $<BUILD_INTERFACE:${OPENSSL_INCLUDE_DIR}>)
+    endif ()
+    if (USE_INTERNAL_POCO_LIBRARY)
+        # Remove pthread from linking poco's Net
+        set_property(TARGET Net PROPERTY INTERFACE_LINK_LIBRARIES "")
+        set_property(TARGET Foundation PROPERTY INTERFACE_LINK_LIBRARIES "")
     endif ()
 endif ()
