--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
 Source: clickhouse-odbc
 Priority: optional
 Maintainer: Alexey Milovidov <milovidov@yandex-team.ru>
-Build-Depends: debhelper (>= 9), cmake3 | cmake, unixodbc-dev, libssl-dev
+Build-Depends: debhelper (>= 9), cmake3 | cmake, unixodbc-dev | libiodbc2-dev
 Standards-Version: 4.1.1
 Homepage: https://clickhouse.yandex
 
 Package: clickhouse-odbc
 Section: database
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, libssl1.0.0
+Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Clickhouse odbc driver
  .
