Fix extract in {fn}

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,9 @@ else ()
     set(UNICODE 0)
 endif ()
 
-set (OPENSSL_LIBRARIES "-Wl,-Bdynamic ${OPENSSL_LIBRARIES} -Wl,-Bstatic")
+if (NOT WIN32)
+    set (OPENSSL_LIBRARIES "-Wl,-Bdynamic ${OPENSSL_LIBRARIES} -Wl,-Bstatic")
+endif ()
 
 include (cmake/find_ltdl.cmake) # for odbc
 include (cmake/find_odbc.cmake)
